--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ blockquote {
 #banner h1 em {
     font-style: normal;
     text-decoration: none;
-    color: #111;
+    color: #ffffff;
 }
 ul#topnav {
     list-style-type: none;
